--- a/content/code/church_attendance.html
+++ b/content/code/church_attendance.html
@@ -9,7 +9,8 @@ categories: []
 
 
 
-<p><a name="top"></a> This post offers an example of data exploration in R. I will cover the following topics:<img src="/code/macon_catholic.jpg" height="400" align = "right" style="padding:10px;"/></p>
+<p><a name="top"></a> This post offers an example of data exploration in R. I will cover the following topics:</p>
+<p><img src="/code/macon_catholic.jpg" style="float: right; width: 50%; margin-left: 2%; margin-right: 2%;margin-bottom: 0.5em;"></p>
 <ul>
 <li><a href="#import">Importing data</a></li>
 <li><a href="#prep">Preparing data</a></li>
