try unstaging all the xcode changes?

--- a/content/code/world_bank_poverty.html
+++ b/content/code/world_bank_poverty.html
@@ -11,7 +11,7 @@ tags: []
 
 <hr />
 <p><a name="top"></a> In this post I perform some data exploration in R. I’ll cover the following topics:</p>
-<p><img src= "https://upload.wikimedia.org/wikipedia/commons/f/f8/Hobos2.jpg" height="400" align = "right" vspace = "50" hspace = "50" /></p>
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/Hobos2.jpg" style="float: right; width: 50%; margin-left: 2%; margin-right: 2%;margin-bottom: 0.5em;"></p>
 <ul>
 <li><a href="#import">Importing data</a></li>
 <li><a href="#prep">Preparing data</a></li>
