no italics on wb RQ. Make sure to unstage xcode changes too. This seems to be working but unsure why...

--- a/content/code/world_bank_poverty.html
+++ b/content/code/world_bank_poverty.html
@@ -20,7 +20,7 @@ tags: []
 <li><a href="#appendix">Appendix: A 10-line code summary</a></li>
 </ul>
 <p>More specifically, I’ll be using the <a href="https://data.worldbank.org/indicator/SI.POV.DDAY?locations=1W&amp;start=1981&amp;end=2013&amp;view=chart">World Bank data</a> on extreme poverty to plot global trends of 162 countries between 1977 to 2016. While sociologists talk about inequality at length, it’s useful to remember the state of poverty on a global perspective. <a href="https://www.gapminder.org/factfulness-book/">Hans Rosling’s recent book (2018)</a> brought this kind of global development data to public attention, and <a href="http://jeffsachs.org/books/the-end-of-poverty/">Jeffrey Sachs’ (2006) book</a> has been on my reading list for some time. Stanford’s Center on Poverty and Inequality publishes a great magazine on the state of the field, with <a href="https://inequality.stanford.edu/publications/pathways/all">all issues available free</a> as PDF or hard copy. For the purpose of my exploration here, the World Bank data measures poverty as the percentage of a country’s population living under the poverty line, considered here $1.90 / day or less in 2011 <a href="https://en.wikipedia.org/wiki/Purchasing_power_parity">purchasing power parity (PPP) dollars</a>.</p>
-<p><strong><em>RQ: How is extreme poverty distributed globally?</em></strong></p>
+<p><strong>RQ: How is extreme poverty distributed globally?</strong></p>
 <hr />
 <pre class="r"><code># Loading required pacakges:
 require(tidyverse)</code></pre>
