add closing pictures

--- a/content/code/text_analysis.html
+++ b/content/code/text_analysis.html
@@ -89,6 +89,7 @@ glimpse(moby_df)</code></pre>
 ## $ vocab_pos      &lt;chr&gt; &quot;precisely strong flourish cherish&quot;
 ## $ emotion_words  &lt;int&gt; 6
 ## $ proportion_pos &lt;dbl&gt; 0.6666667</code></pre>
+<p><img src = "/code/uvic.jpg"></p>
 <p><a name="df"></a></p>
 </div>
 <div id="text-within-data-frames" class="section level2">
@@ -192,7 +193,7 @@ glimpse(df_final)</code></pre>
 <div style="text-align: center">
 <strong>The End</strong>
 </div>
-<p><img src = "/code/uvic.jpg"></p>
+<p><img src="/code/hm2.jpg" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 3%;"> <img src="/code/dwsb.jpg" style="float: right; width: 49%; margin-right: 1%; margin-bottom: 3%;"></p>
 <hr />
 <p><a href="/xcode/">Code Home</a></p>
 <hr />
