--- a/content/code/text_analysis.html
+++ b/content/code/text_analysis.html
@@ -191,10 +191,7 @@ glimpse(df_final)</code></pre>
 ## $ emotion_words &lt;int&gt; 4, 4, 4
 ## $ positive_prop &lt;dbl&gt; 0.5, 0.5, 0.5</code></pre>
 <p><img src="/code/chi_boat.jpg"></p>
+<p><a href="/xcode/"><strong>Code Home</strong></a></p>
 <hr />
-<p><a href="/xcode/">Code Home</a></p>
-<hr />
-<div id="copyright-2018-john-a.-bernau" class="section level3">
-<h3><em>Copyright © 2018 John A. Bernau</em></h3>
-</div>
+<p><font color = "gray", size="2">Copyright © 2018 John A. Bernau</font></p>
 </div>
